@@ -1,3 +1,7 @@
+2003-12-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - new bump mapped water.
+
 2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp ocean_wave_generator.h
 	  - more realistic water display.
